k8s/Notification-service/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: minamo0o2/scalabol:notification-service
          ports:
            - containerPort: 8089
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "750m"
