k8s/Notification-service/notification-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: scalabol.notification
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notification
                port:
                  number: 8089
